--- a/26_miniproject/project06/index.html
+++ b/26_miniproject/project06/index.html
@@ -16,11 +16,11 @@
 
         <div id="language">
             <!-- <h1>Langaguge : </h1> -->
-            <select name="lang" id="lang">
+            <!-- <select name="lang" id="lang">
                 <option value="english">English</option>
                 <option value="hindi">Hindi</option>
                 <option value="chiinese">Chinese</option>
-            </select>
+            </select> -->
         </div>
     </div>
 
@@ -44,8 +44,8 @@
         <div class="group">
         </div>
     </div>
-    <div id="card" class="faq-group">
-
+    <div id="faq-related" class="faq-group">
+        
     </div>
 </body>
 <script src="script.js"></script>
