--- a/26_miniproject/project06/request.html
+++ b/26_miniproject/project06/request.html
@@ -34,7 +34,7 @@
         color: #000000;
     }
 
-    /* button[type="submit"] {
+    button[type="submit"] {
         background-color : linear-gradient(90deg, #FEC45D, #FC6E7B, #995FBB);
         color: rgb(0, 0, 0);
         padding: 10px 15px;
@@ -45,7 +45,7 @@
 
     button[type="submit"]:hover {
         background-color : linear-gradient(90deg, #FEC45D, #FC6E7B, #995FBB);
-    } */
+    }
     #request-title {
         text-align: center;
         margin-top: 20px;
